# packages/origine2/src/config/swagger.json
@@ -1132,7 +1132,14 @@
         },
         "responses": {
           "200": {
-            "description": "Output Template Successfully."
+            "description": "Output Template Successfully.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "boolean"
+                }
+              }
+            }
           },
           "400": {
             "description": "Output Template Failed."
@@ -1160,7 +1167,14 @@
         },
         "responses": {
           "200": {
-            "description": "Import Template Successfully."
+            "description": "Import Template Successfully.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "boolean"
+                }
+              }
+            }
           },
           "400": {
             "description": "Import Template Failed."
@@ -1714,18 +1728,13 @@
       "OutputTemplateDto": {
         "type": "object",
         "properties": {
-          "sourceDir": {
+          "templateDir": {
             "type": "string",
-            "description": "The path of the source directory"
-          },
-          "outPath": {
-            "type": "string",
-            "description": "The path of the out directory"
+            "description": "The template directory name"
           }
         },
         "required": [
-          "sourceDir",
-          "outPath"
+          "templateDir"
         ]
       },
       "ImportTemplateDto": {
